--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "devStart": "nodemon server.js",
-    "start":"PROD=true node server.js",
+    "start":"node server.js",
     "postinstall": "npm"
   },
   "repository": {
