--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "devStart": "nodemon server.js",
-    "start":"node server.js",
-    "postinstall": "npm"
+    "start":"node server.js"
+  
   },
   "repository": {
     "type": "git",
